terraform/1-vpc.tf
resource "aws_vpc" "formapp-vpc" {
  cidr_block = "10.0.0.0/16"

  enable_dns_hostnames = true

  tags = {
    Name = "formapp-vpc"
  }
}
